@@ -1,3 +1,9 @@
+1998-10-14  Olaf Bachmann  <obachman@mathematik.uni-kl.de>
+
+	* MP_TcpTransp.c: added MP_KillLink, -MPrsh option to MP_OpenLink
+
+	* MP_Util.c: Added IMP_StrDup function
+
 1998-04-16  Olaf Bachmann  <obachman@mathematik.uni-kl.de>
 
 	* MP_Util.c (IMP_GetCmdlineArg): Allow long option names
